[gd_scene load_steps=3 format=3 uid="uid://c3c057qjwftdo"]

[ext_resource type="Script" path="res://ui/server_browser_ui/server-browser.gd" id="1_e8y04"]
[ext_resource type="Script" path="res://ui/server_browser_ui/browser-http.gd" id="2_7wbjw"]

[node name="ServerBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8y04")

[node name="BrowserHTTP" type="HTTPRequest" parent="."]
script = ExtResource("2_7wbjw")

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_bottom = 25.0
grow_horizontal = 0
text = "Назад"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -75.0
offset_right = 196.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="BrowserHeaderGBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Player" type="Label" parent="VBoxContainer/BrowserHeaderGBox"]
layout_mode = 2
size_flags_horizontal = 2
text = "Игрок"

[node name="Amount" type="Label" parent="VBoxContainer/BrowserHeaderGBox"]
layout_mode = 2
size_flags_horizontal = 2
text = "кол-во"

[node name="RefreshButton" type="Button" parent="VBoxContainer/BrowserHeaderGBox"]
layout_mode = 2
size_flags_horizontal = 10
text = "Обновить"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ServerList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BrowserHeaderGBox/RefreshButton" to="." method="_on_refresh_button_pressed"]
